# aviasales

./: .env.example  .gitattributes  .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_TEMPLATE.md  MEGA_PROMPT.md  Makefile  README.md  alembic.ini  pyproject.toml
docs/: ARCHITECTURE.md  PROVIDER_MATRIX.md  START_HERE_RU.md
docs/adr/: 0001-python-foundation-and-policy-first.md  0002-backend-foundation-demo-search.md  0003-airport-demo-reference-data.md  0004-flexible-date-matrix-planning.md  0005-alert-hysteresis-and-dedupe.md  0006-persistence-history-and-scheduler-foundation.md  0007-mergeable-offer-ranking.md  0008-fastapi-served-beginner-web-ui.md  0009-telegram-webhook-security-foundation.md  0010-aviasales-data-smoke-helper.md  0011-watch-api-household-context.md  0012-local-sqlite-backup-restore.md  0013-admin-provider-health-endpoint.md  0014-agent-presets-and-live-refresh-gap.md  0015-rub-clickout-price-observer.md  0016-live-observation-control-plane.md  0017-search-api-and-mcp-policy-skeletons.md  0018-live-observation-retention-cleanup.md  0019-durable-telegram-update-dedupe.md  0020-scheduler-provider-registry-guard.md  0021-search-intent-passenger-mix-and-trip-type.md  0022-aviasales-data-exact-date-query-planner.md  0023-api-passenger-mix-validation.md  0024-agent-chat-city-search-and-codex-cli-bridge.md  0025-provider-source-contract-catalog.md
docs/plans/: MEGA_MONSTER_PLAN.md  couple_calendar_research_monster_plan.md
docs/provider-contracts/: aviasales-data.md  aviasales-search.md  demo-browser-observer.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_price_history_and_alert_dedupe.py  (+5 more)
(+129 files in other folders)
