[project]
name = "flight-hunter"
version = "0.1.0"
description = "Self-hosted invitation-only flight search and watch system."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.17.0,<2.0.0",
  "fastapi>=0.125.0,<1.0.0",
  "httpx2>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.45,<3.0.0",
  "uvicorn>=0.38.0,<1.0.0",
]

[project.scripts]
flight-hunter-import-airports = "flight_hunter.ops.airport_import:main"
flight-hunter-backup = "flight_hunter.ops.backup:backup_main"
flight-hunter-cleanup-live-observations = "flight_hunter.ops.live_observation_cleanup:main"
flight-hunter-observe = "flight_hunter.providers.personal_observer.cli:main"
flight-hunter-restore = "flight_hunter.ops.backup:restore_main"
travelpayouts-smoke = "flight_hunter.providers.aviasales_data.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
crawler = [
    "crawl4ai>=0.7,<1.0",
]
dev = [
  "aiosqlite>=0.21.0,<1.0.0",
  "mypy>=1.18.0,<2.0.0",
  "pytest>=9.0.0,<10.0.0",
  "ruff>=0.14.0,<0.15.0",
]
scraping = [
    "beautifulsoup4>=4.12,<5.0",
    "playwright>=1.50,<2.0",
    "scrapling>=0.2,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest-tmp"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["flight_hunter"]

[tool.hatch.build.targets.wheel]
packages = ["src/flight_hunter"]
